# peaceable-queens

./: .gitignore  README.md  pyproject.toml
notebooks/: creating_domain.ipynb
peaceable_queens/: board.py  cost.py  optimize.py  peacable_queens_types.py
results/: 32_15.pkl  4_2.pkl  SOLUTION_32_15_2020_09_18_14_55_33.pkl
src/peacablequeens.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/peaceablequeens/: __main__.py  board.py  cost.py  optimize.py  plotting.py
src/peaceablequeens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/peaceablequeens/results/2020_09_11_14_18_54/: 16_38_10000.pkl
tests/: test_board.py  test_costs.py
