[tool.poetry]
name = "peaceable-queens"
version = "0.1.0"
description = ""
authors = ["Ryan O'Sullivan <osullivryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
deap = "^1.3.1"
numpy = "^1.19.1"
ipython = "^7.18.1"
black = "^20.8b1"
numba = "^0.51.2"
pytest = "^6.0.1"
regex = "^2020.7.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
